<resources>
    <string name="app_name">TicTacToe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="easy_mode">Easy Mode</string>
    <string name="hard_mode">Hard Mode</string>
    <string name="two_player_mode">Two Player Mode</string>
    <string name="welcome_to_tic_tac_toe">Welcome to TicTacToe!</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="single_player">Who will you play as?</string>
    <string name="two_player">Who will play first?</string>
    <string name="gameMode">Select a game mode</string>
    <string name="game_board">Game Board</string>
    <string name="reset_game">Reset Game</string>
    <string name="back_to_menu">Back to Menu</string>


    <string name="two_player_xup">Player X is up!</string>
    <string name="two_player_oup">Player O is up!</string>
    <string name="two_player_xwin">Player X Won!</string>
    <string name="two_player_owin">Player O Won!</string>
    <string name="two_player_cats_game">Cat\'s Game! Play Again?</string>
    <string name="single_player_win">You Won!</string>
    <string name="single_player_lose">You Lost!</string>
    <string name="single_player_cats_game">Cat\'s Game! Try Again?</string>

    <string name="single_player_up">You are up!</string>
    <string name="computers_turn">Computer\'s Turn</string>


    <string name="cell_1_1">Cell 1, 1</string>
    <string name="cell_1_2">Cell 1, 2</string>
    <string name="cell_1_3">Cell 1, 3</string>
    <string name="cell_2_1">Cell 2, 1</string>
    <string name="cell_2_2">Cell 2, 2</string>
    <string name="cell_2_3">Cell 2, 3</string>
    <string name="cell_3_1">Cell 3, 1</string>
    <string name="cell_3_2">Cell 3, 2</string>
    <string name="cell_3_3">Cell 3, 3</string>
    <string name="medium_mode">Medium Mode</string>
    <string name="settings">Settings</string>

    <string-array name= "X_button_options">
        <item>X</item>
        <item>Triangle</item>
        <item>Icon(CHOOSE)</item>
        <item>Icon(CHOOSE)</item>
    </string-array>

    <string-array name= "O_button_options">
        <item>O</item>
        <item>Square</item>
        <item>Icon(CHOOSE)</item>
        <item>Icon(CHOOSE)</item>
    </string-array>


    <string-array name= "X_color_options">
        <item>Red</item>
        <item>Green</item>
        <item>Black</item>
        <item>Clear</item>
    </string-array>


    <string-array name= "O_color_options">
        <item>Blue</item>
        <item>Orange</item>
        <item>White</item>
        <item>Clear</item>
    </string-array>
</resources>