<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">

    <!-- TODO: Update blank fragment layout -->


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:importantForAccessibility="no"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp">

        <TextView
            android:id="@+id/userIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/archivo_black"
            android:importantForAccessibility="yes"
            android:paddingStart="15dp"
            android:paddingTop="7dp"
            android:paddingEnd="15dp"
            android:paddingBottom="7dp"
            android:textSize="25sp"
            tools:text="@string/hello_blank_fragment" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/board"
        style="@style/tttBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/game_board"
        android:src="@drawable/board" />

    <Button
        android:id="@+id/cell_1_1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="105dp"
        android:contentDescription="@string/cell_1_1"
        android:fontFamily="@font/baloo"
        android:importantForAccessibility="yes"
        android:includeFontPadding="true"
        android:insetTop="-20dp"
        android:insetBottom="0dp"
        android:textSize="85sp"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        tools:text="X" />

    <Button
        android:id="@+id/cell_1_2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/cell_1_2"
        android:fontFamily="@font/baloo"
        android:importantForAccessibility="yes"
        android:insetTop="-20dp"
        android:insetBottom="0dp"
        android:textSize="85sp" />

    <Button
        android:id="@+id/cell_1_3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"

        android:layout_gravity="center_horizontal"
        android:layout_marginStart="105dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/cell_1_3"
        android:fontFamily="@font/baloo"
        android:importantForAccessibility="yes"
        android:insetTop="-20dp"
        android:insetBottom="0dp"
        android:textSize="85sp" />

    <Button
        android:id="@+id/cell_2_1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="105dp"
        android:contentDescription="@string/cell_2_1"
        android:fontFamily="@font/baloo"
        android:importantForAccessibility="yes"
        android:insetTop="-20dp"
        android:insetBottom="0dp"
        android:textSize="85sp" />

    <Button
        android:id="@+id/cell_2_2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="205dp"
        android:contentDescription="@string/cell_2_2"
        android:fontFamily="@font/baloo"
        android:importantForAccessibility="yes"
        android:insetTop="-20dp"
        android:insetBottom="0dp"
        android:textSize="85sp" />

    <Button
        android:id="@+id/cell_2_3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"

        android:layout_gravity="center_horizontal"
        android:layout_marginStart="105dp"
        android:layout_marginTop="205dp"
        android:contentDescription="@string/cell_2_3"
        android:fontFamily="@font/baloo"
        android:importantForAccessibility="yes"
        android:insetTop="-20dp"
        android:insetBottom="0dp"
        android:textSize="85sp" />

    <Button
        android:id="@+id/cell_3_2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="310dp"
        android:contentDescription="@string/cell_3_2"
        android:fontFamily="@font/baloo"
        android:importantForAccessibility="yes"
        android:insetTop="-20dp"
        android:insetBottom="0dp"
        android:textSize="85sp" />

    <Button
        android:id="@+id/cell_3_1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="105dp"
        android:contentDescription="@string/cell_3_1"
        android:fontFamily="@font/baloo"
        android:importantForAccessibility="yes"
        android:insetTop="-20dp"
        android:insetBottom="0dp"
        android:textSize="85sp" />

    <Button
        android:id="@+id/cell_3_3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"

        android:layout_gravity="center_horizontal"
        android:layout_marginStart="105dp"
        android:layout_marginTop="310dp"
        android:contentDescription="@string/cell_3_3"
        android:fontFamily="@font/baloo"
        android:importantForAccessibility="yes"
        android:insetTop="-20dp"
        android:insetBottom="0dp"
        android:textSize="85sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetButton"
        style="@style/buttonColor"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="165dp"
        android:contentDescription="@string/reset_game"
        android:fontFamily="@font/blinker_semibold"
        android:importantForAccessibility="yes"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:stateListAnimator="@animator/button_state_list_animator_material"
        android:text="@string/reset_game"
        android:textSize="25sp"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="add"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/homePage_button"
        style="@style/buttonColor"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="230dp"
        android:contentDescription="@string/back_to_menu"
        android:fontFamily="@font/blinker_semibold"
        android:importantForAccessibility="yes"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="add"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:stateListAnimator="@animator/button_state_list_animator_material"
        android:text="@string/back_to_menu"
        android:textSize="25sp"
        tools:ignore="TextContrastCheck"
        />


</FrameLayout>